# earth_observation_satellites

./: .gitignore  CMakeLists.txt  README.md  formats.txt  main.cpp  satellites.txt  spot.txt
creators/: SatelliteGroupCreator.cpp  SatelliteGroupCreator.hpp
observation/: ObservationController.cpp  ObservationController.hpp  VisibilityChecker.cpp  VisibilityChecker.hpp
satellite_motion/system/: SatelliteECEF.cpp  SatelliteECEF.hpp  SatelliteECI.cpp  SatelliteECI.hpp  SpacecraftGreenwichCS.cpp
satellite_motion/wrapper/: Satellite.cpp  Satellite.hpp
utils/: constants.hpp  time.cpp  time.hpp
visualize/: test.py  test2.py  trajectory.py  visualize.py
